# boat-backend

./: .coderabbit.yaml  .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  alembic.ini  conftest.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: branch-policy.yml  ci.yml
.skills/boat-backend-erd-guard/: SKILL.md
alembic/: env.py
alembic/versions/: 20260614_0001_create_users_auth_tables.py  20260620_0002_extend_auth_users_account_state.py  20260622_0003_remove_users_normalized_email.py  20260624_0004_add_verified_external_identity_email_index.py  20260624_0004_create_files_tables.py  20260624_0005_add_user_profile_image_file_id.py  20260625_0005_create_receipts_table.py  20260625_0006_create_files_tables.py  20260626_0007_align_files_schema_with_erd.py  20260627_0008_remove_user_notification_fields.py  20260628_0009_create_notifications_tables.py  20260701_0010_add_receipt_sub_category.py  20260701_0011_create_credit_tables.py  20260702_0011_add_receipt_serial_number.py  20260703_0012_create_promotion_tables.py  20260703_0013_extend_credit_source_metadata.py  20260704_0012_create_user_push_tokens_table.py  20260704_0012_restore_user_push_tokens_table.py  20260705_0013_generalize_user_notifications.py  20260705_0014_create_outbox_events.py  20260705_0014_create_promotion_contents.py  20260705_0014_rename_user_push_tokens_fid_to_token.py  20260705_0015_create_outbox_events.py  20260705_0016_create_promotion_tables.py  20260705_0017_extend_credit_source_metadata.py  20260705_0018_create_promotion_contents.py  20260707_0019_add_promotion_context.py  20260709_0020_create_notification_schedule_rules.py  20260709_0021_create_notification_schedule_occurrences.py  20260710_0022_add_scheduler_query_indexes.py  20260712_0023_add_credit_transaction_purge_after.py  20260712_0023_convert_receipt_category_to_enum.py  20260712_0023_create_withdrawn_identities.py  20260712_0024_add_signup_beneficiary_key_to_promotion_redemptions.py  (+3 more)
app/: AGENTS.md  __init__.py  main.py
app/core/: AGENTS.md
docs/: mvp-api-design.md
scripts/: verify_git_flow.py  verify_release_version.py
tests/: test_app.py  test_bc_domain_contracts.py  test_bc_mock_contracts.py  test_database_configuration.py  test_db_session_architecture.py  test_notifications_app_contract.py  test_verify_git_flow.py
(+570 files in other folders)
